Airbnb_backend/collector.yml
# collector-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
        - name: collector
          image: otel/opentelemetry-collector:0.69.0
          volumeMounts:
            - name: collector-configmap
              mountPath: /etc/otel-collector-config.yaml
            - name: otel-collector-storage
              mountPath: /storage
      volumes:
      - name: collector-configmap
        configMap:
          name: collector-configmap
      - name: otel-collector-storage
        persistentVolumeClaim:
          claimName: collector-pvc

---
# collector-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: collector
#spec:
#  selector:
#    app: collector
#  ports:
#    - protocol: TCP
#      port: 14250
#      targetPort: 14250
