Airbnb_backend/acc-service.yml
# acc-service-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acc-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acc-service
  template:
    metadata:
      labels:
        app: acc-service
    spec:
      containers:
        - name: acc-server
          image: docker.io/library/airbnb_backend-acc-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
          volumeMounts:
            - mountPath: /app/logs
              name: acc-logs
      volumes:
        - name: acc-logs
          emptyDir: { }
---
#acc-service
apiVersion: v1
kind: Service
metadata:
  name: acc-server
spec:
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
  selector:
    app: acc-service
