Airbnb_backend/api-gateway.yml
# api-gateway-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: docker.io/library/airbnb_backend-api_gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: api-gateway-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: api-gateway-secret
            items:
              - key: tls.crt
                path: api-gateway.crt
              - key: tls.key
                path: api-gateway.key
        - name: api-gateway-config
          configMap:
            name: api-gateway-configmap
---
# api-gateway-service
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  ports:
    - port: 8000
      nodePort: 32000
      targetPort: gateway-port
      protocol: TCP
      name: gateway-port
  type: NodePort
  selector:
    app: api-gateway
