Airbnb_backend/auth-service.yml

# auth-service-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-server
          image: docker.io/library/airbnb_backend-auth-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/logs
              name: auth-logs
      volumes:
        - name: auth-logs
          emptyDir: { }

---
#auth-service
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: auth-service
