Airbnb_backend/mongo.yml
# mongo-statefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: docker.io/library/mongo:latest
          ports:
            - containerPort: 27017
      volumes:
        - name: mongostore
          persistentVolumeClaim:
            claimName: mongo-pvc
---
# mongo-service
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
