Airbnb_backend/neo4j.yml

# neo4j-statefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j
spec:
  serviceName: "neo4j"
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
        - name: neo4j
          image: neo4j
          ports:
            - name: bolt
              containerPort: 7687
            - name: http
              containerPort: 7474
            - name: https
              containerPort: 7473
      volumes:
        - name: neo4jdata
          persistentVolumeClaim:
            claimName: neo4j-pvc
---
#neo4j-service
apiVersion: v1
kind: Service
metadata:
  name: neo4j
spec:
  type: LoadBalancer
  selector:
    app: neo4j
  ports:
    - name: bolt
      protocol: TCP
      port: 7687
      targetPort: 7687
    - name: http
      protocol: TCP
      port: 7474
      targetPort: 7474
    - name: https
      protocol: TCP
      port: 7473
      targetPort: 7473
