Airbnb_backend/notifications-service.yml
# notifications-service-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
        - name: notifications-server
          image: docker.io/library/airbnb_backend-notifications-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8089
              name: notif-port
      volumes:
        - name: tls-certs
          secret:
            secretName: notifications-tls
            items:
              - key: tls.crt
                path: notifications-service.crt
              - key: tls.key
                path: notifications-service.key
---
#notifications-service
apiVersion: v1
kind: Service
metadata:
  name: notifications-server
spec:
  ports:
    - port: 8089
      nodePort: 30004
      targetPort: notif-port
      protocol: TCP
      name: notif-service-port
  type: NodePort
  selector:
    app: notifications-service
