Airbnb_backend/profile-service.yml
# profile-service-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      containers:
        - name: profile-server
          image: docker.io/library/airbnb_backend-profile-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8084
              name: profile-port
      volumes:
        - name: tls-certs
          secret:
            secretName: profile-tls
            items:
              - key: tls.crt
                path: profile-service.crt
              - key: tls.key
                path: profile-service.key
---
#profile-service
apiVersion: v1
kind: Service
metadata:
  name: profile-server
spec:
  ports:
    - port: 8084
      nodePort: 30005
      targetPort: profile-port
      protocol: TCP
      name: profile-service-port
  type: NodePort
  selector:
    app: profile-service
