Airbnb_backend/rating-service.yml
# rating-service-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-service
  template:
    metadata:
      labels:
        app: rating-service
    spec:
      containers:
        - name: rating-server
          image: docker.io/library/airbnb_backend-rating-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8087
          volumeMounts:
            - mountPath: /app/logs
              name: rating-logs
      volumes:
        - name: rating-logs
          emptyDir: { }
---
#rating-service
apiVersion: v1
kind: Service
metadata:
  name: rating-server
spec:
  ports:
    - port: 8087
      targetPort: 8087
      protocol: TCP
  selector:
    app: rating-service
