Airbnb_backend/redis.yml
# redis-statefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: "redis"
          command:
            - "redis-server"
            - "--save"
            - "20"
            - "1"
            - "--loglevel"
            - "warning"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redisdata
              mountPath: /data
      volumes:
        - name: redisdata
          persistentVolumeClaim:
            claimName: redis-pvc
---
# redis-service
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
