Airbnb_backend/res-service.yml
# res-service-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: res-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: res-service
  template:
    metadata:
      labels:
        app: res-service
    spec:
      containers:
        - name: res-server
          image: docker.io/library/airbnb_backend-res-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
      volumes:
        - name: tls-certs
          secret:
            secretName: res-tls
            items:
              - key: tls.crt
                path: reservation-service.crt
              - key: tls.key
                path: reservation_decrypted_key.pem
---
#res-service
apiVersion: v1
kind: Service
metadata:
  name: res-server
spec:
  ports:
    - port: 8082
      nodePort: 30003
      targetPort: res-port
      protocol: TCP
      name: res-port
  type: NodePort
  selector:
    app: res-service
