Airbnb_backend/ingress.yml
#ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
          - path: /api/reservations(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: res-server
                port:
                  number: 8082
          - path: /api/report(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: res-server
                port:
                  number: 8082
          - path: /api/availability(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: res-server
                port:
                  number: 8082
          - path: /api/accommodations(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: acc-server
                port:
                  number: 8083
          - path: /api/profile(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: profile-server
                port:
                  number: 8084
          - path: /api/rating(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rating-server
                port:
                  number: 8087
          - path: /api/notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notifications-server
                port:
                  number: 8089
